--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="resources//favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <script src="https://kit.fontawesome.com/418a18ebb4.js"></script>
 </head>
 
 <body>
@@ -269,22 +268,25 @@
 
     <footer>
         <div class="socials">
-            <li>
-                <a href="https://github.com/AbrahamDN" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-github"></i>
-                </a>
-            </li>
-            <li>
-                <a href="mailto:ad.ndinga@gmail.com">
-                    <i class="fas fa-envelope"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/abrahamdn/" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-            </li>
+            <a href="https://github.com/AbrahamDN" target="_blank" rel="noopener noreferrer">
+                <div class="social">
+                    <img src="resources/github-logo.svg" alt="GitHub">
+                </div>
+            </a>
+
+            <a href="mailto:ad.ndinga@gmail.com">
+                <div class="social">
+                    <img src="resources/envelope.svg" alt="Email">
+                </div>
+            </a>
+
+            <a href="https://www.linkedin.com/in/abrahamdn/" target="_blank" rel="noopener noreferrer">
+                <div class="social">
+                    <img src="resources/linkedin.svg" alt="LinkedIn">
+                </div>
+            </a>
         </div>
+
         &copy; Designed & Built by <a href="https://github.com/AbrahamDN" target="_blank">
             Abraham D.Ndinga</a>
     </footer>
