--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
                 </a>
 
                 <div class="prj-desc">
+                    <h3>To-do-List</h3>
+                    <br>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima fuga dolor, quidem aliquam
-                        ad ex mollitia quas modi autem excepturi!
+                        Manage your time effectively by noting your daily, weekly or even yearly assignments. You can
+                        create your own private list or see what others have got to do in the default public list.
                     </p>
                     <div class="prj-tags">
                         <ul>
@@ -131,9 +133,11 @@
                 </a>
 
                 <div class="prj-desc">
+                    <h3>Simpol Search</h3>
+                    <br>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima fuga dolor, quidem aliquam
-                        ad ex mollitia quas modi autem excepturi!
+                        Need information? Wikipedia has one of the worlds largest information database. Simpol search
+                        makes searching for what you need easy, with its clear & simple user interface.
                     </p>
                     <div class="prj-tags">
                         <ul>
@@ -171,9 +175,11 @@
                 </a>
 
                 <div class="prj-desc">
+                    <h3>Books Publishing</h3>
+                    <br>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima fuga dolor, quidem aliquam
-                        ad ex mollitia quas modi autem excepturi!
+                        This is a mythological book publishing site. It's a beautiful template built with BootStrap,
+                        built to be professional & engaging.
                     </p>
                     <div class="prj-tags">
                         <ul>
@@ -248,12 +254,15 @@
             <form action="https://formspree.io/ad.ndinga@gmail.com" method="post">
                 <label>
 
-                    <input type="text" name="name" placeholder="Name">
-                    <input type="email" name="email" placeholder="Email">
-                    <input type="text" name="subject" placeholder="Subject">
+                    <input aria-label="name" type="text" name="name" placeholder="Name">
+
+                    <input aria-label="email" type="email" name="email" placeholder="Email">
+
+                    <input aria-label="subject" type="text" name="subject" placeholder="Subject">
+
                 </label>
-                <label>
-                    <textarea name="message"></textarea>
+                <label for="message">
+                    <textarea aria-label="message" name="message" placeholder="Message"></textarea>
                 </label>
                 <label class="btnLabel">
                     <button class="submitBtn" type="submit">Submit</button>
@@ -268,26 +277,28 @@
 
     <footer>
         <div class="socials">
-            <a href="https://github.com/AbrahamDN" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/AbrahamDN" aria-label="github" target="_blank" rel="noopener noreferrer">
                 <div class="social">
                     <img src="resources/github-logo.svg" alt="GitHub">
                 </div>
             </a>
 
-            <a href="mailto:ad.ndinga@gmail.com">
+            <a href="mailto:ad.ndinga@gmail.com" aria-label="email">
                 <div class="social">
                     <img src="resources/envelope.svg" alt="Email">
                 </div>
             </a>
 
-            <a href="https://www.linkedin.com/in/abrahamdn/" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.linkedin.com/in/abrahamdn/" aria-label="likedIn" target="_blank"
+                rel="noopener noreferrer">
                 <div class="social">
                     <img src="resources/linkedin.svg" alt="LinkedIn">
                 </div>
             </a>
         </div>
 
-        &copy; Designed & Built by <a href="https://github.com/AbrahamDN" target="_blank">
+        &copy; Designed & Built by <a href="https://github.com/AbrahamDN" aria-label="github" target="_blank"
+            rel="noopener noreferrer">
             Abraham D.Ndinga</a>
     </footer>
 
