--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
             <div class="project">
                 <div class="prj-img">
                     <span>
-                        <img src="./img/project1-device.png" alt="project" loading="lazy">
+                        <a href="https://telimine.abrahamdn.com" target="_blank" rel="noopener noreferrer">
+                            <img src="./img/project1-device.png" alt="project">
+                        </a>
                     </span>
                 </div>
                 <div class="prj-content">
@@ -165,11 +167,10 @@
                         phones from the leading
                         brands.
                     </p>
-                    <ul>
-                        <li>eCommerce</li>,
-                        <li>PayPal checkout</li>
-                    </ul>
                     <br>
+                    <i>eCommerce</i>,
+                    <i>PayPal checkout</i>
+                    <br><br>
                     <div class="prj-tech">
                         <ul>
                             <li>
@@ -201,7 +202,8 @@
                             </a>
                         </span>
                         <span>
-                            <a href="https://github.com/AbrahamDN" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/AbrahamDN/react-phone-store-telimine" target="_blank"
+                                rel="noopener noreferrer">
                                 <img src="./img/github.svg" alt="See the code in ">
                                 <p>Github</p>
                             </a>
@@ -209,25 +211,147 @@
                     </div>
                 </div>
             </div>
-        </div>
+
+            <!-- Project 2 -->
+            <div class="project">
+                <div class="prj-img">
+                    <span>
+                        <a href="https://abrahamdn.com/Pro-Splash/" target="_blank" rel="noopener noreferrer">
+                            <img src="./img/project2-device.png" alt="project">
+                        </a>
+                    </span>
+                </div>
+                <div class="prj-content">
+                    <h3>Pro Splash</h3>
+                    <br>
+                    <p>
+                        Pro-Splash is a collaborative portfolio blog/site that introduces 3 professionals, each in
+                        different industries
+                    </p>
+                    <br>
+                    <i>animations</i>,
+                    <i>imageSlider on scroll</i>
+                    <br><br>
+                    <div class="prj-tech">
+                        <ul>
+                            <li>
+                                <button>
+                                    <img src="./img/css.svg" alt="Language: ">
+                                    <span>CSS</span>
+                                </button>
+                            </li>
+                            <li>
+                                <button>
+                                    <img src="./img/javascript.svg" alt="Language: ">
+                                    <span>JavaScript</span>
+                                </button>
+                            </li>
+                            <li>
+                                <button>
+                                    <span>GSAP</span>
+                                </button>
+                            </li>
+                        </ul>
+                    </div>
+                    <br>
+                    <div class="prj-content-ft">
+                        <span>
+                            <a href="https://abrahamdn.com/Pro-Splash/" target="_blank" rel="noopener noreferrer">
+                                <img src="./img/eye.svg" alt="👁">
+                                <p>View site</p>
+                            </a>
+                        </span>
+                        <span>
+                            <a href="https://github.com/AbrahamDN/Pro-Splash" target="_blank" rel="noopener noreferrer">
+                                <img src="./img/github.svg" alt="See the code in ">
+                                <p>Github</p>
+                            </a>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project 3 -->
+            <div class="project">
+                <div class="prj-img">
+                    <span>
+                        <a href="http://todolist.abrahamdn.com/" target="_blank" rel="noopener noreferrer">
+                            <img src="./img/project3-device.png" alt="project">
+                        </a>
+                    </span>
+                </div>
+                <div class="prj-content">
+                    <h3>To do list</h3>
+                    <br>
+                    <p>
+                        NodeJS todo list. I included this project as it uses many nodejs features & functions. This
+                        project is a full-stack
+                        project as it uses a backend (mongoDB) to store data.
+                    </p>
+                    <br>
+                    <i>Database</i>,
+                    <i>RESTful</i>
+                    <br><br>
+                    <div class="prj-tech">
+                        <ul>
+                            <li>
+                                <button>
+                                    <img src="./img/css.svg" alt="Language: ">
+                                    <span>CSS</span>
+                                </button>
+                            </li>
+                            <li>
+                                <button>
+                                    <img src="./img/javascript.svg" alt="Language: ">
+                                    <span>JavaScript</span>
+                                </button>
+                            </li>
+                            <li>
+                                <button>
+                                    <img src="./img/mongodb.svg" alt="Database: " style="width: 15px;">
+                                    <span>MongoDB</span>
+                                </button>
+                            </li>
+                            <li>
+                                <button>
+                                    <span>NodeJS</span>
+                                </button>
+                            </li>
+                        </ul>
+                    </div>
+                    <br>
+                    <div class="prj-content-ft">
+                        <span>
+                            <a href="http://todolist.abrahamdn.com/" target="_blank" rel="noopener noreferrer">
+                                <img src="./img/eye.svg" alt="👁">
+                                <p>View site</p>
+                            </a>
+                        </span>
+                        <span>
+                            <a href="https://github.com/AbrahamDN/todolist" target="_blank" rel="noopener noreferrer">
+                                <img src="./img/github.svg" alt="See the code in ">
+                                <p>Github</p>
+                            </a>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <br>
+            <span>
+                <a href="https://github.com/AbrahamDN" target="_blank" rel="noopener noreferrer">
+                    <i>
+                        <h4>
+                            See More Projects
+                        </h4>
+                    </i>
+                    <img src="./img/github.svg" alt="on Github">
+                </a>
+            </span>
     </section>
 
 
     <!-- Script -->
-    <script>
-        // Native (Image) Lazy Loading
-        if ('loading' in HTMLImageElement.prototype) {
-            const images = document.querySelectorAll('img[loading="lazy"]');
-            images.forEach(img => {
-                img.src = img.dataset.src;
-            });
-        } else {
-            const script = document.createElement('script');
-            script.src = 'https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.1.1/lazysizes.min.js';
-            document.body.appendChild(script); e
-        }
-
-    </script>
     <script src="./js/index.js"></script>
 </body>
 
